@@ -49,8 +49,15 @@ public class Main {
         File classesDex = new File(aarTemp, "classes.dex");
         //dx --dex --output out.dex in.jar
         //dx --dex --output D:\Downloads\android_space\DexDEApplication\proxy_tools\temp\classes.dex D:\Downloads\android_space\DexDEApplication\proxy_tools\temp\classes.jar
-        Process process = Runtime.getRuntime().exec("cmd /c dx --dex --output " + classesDex.getAbsolutePath()
-                + " " + classesJar.getAbsolutePath());
+
+        //window
+//        Process process = Runtime.getRuntime().exec("cmd /c dx --dex --output " + classesDex.getAbsolutePath()
+//                + " " + classesJar.getAbsolutePath());
+
+        //mac
+        String cmd = "/Users/ziqimo/Library/Android/sdk/build-tools/27.0.3/dx --dex --output "
+                + classesDex.getAbsolutePath() + " " + classesJar.getAbsolutePath();
+        Process process = Runtime.getRuntime().exec(new String[]{"/bin/sh", "-c", cmd});
         process.waitFor();
         if (process.exitValue() != 0) {
             throw new RuntimeException("dex error");
@@ -63,7 +70,7 @@ public class Main {
      * 2.加密APK中所有的dex文件
      */
     public static void encryptApkAllDex() throws Exception {
-        File apkFile = new File("app/build/outputs/apk/debug/app-debug.apk");
+        File apkFile = new File("app/build/outputs/apk/debug/sadfasdfas.apk");
         File apkTemp = new File("app/build/outputs/apk/debug/temp");
         Zip.unZip(apkFile, apkTemp);
         //只要dex文件拿出来加密
@@ -97,7 +104,7 @@ public class Main {
         File aarTemp = new File("proxy_tools/temp");
         File classesDex = new File(aarTemp, "classes.dex");
         classesDex.renameTo(new File(apkTemp, "classes.dex"));
-        File unSignedApk = new File("app/build/outputs/apk/debug/app-unsigned.apk");
+        File unSignedApk = new File("app/build/outputs/apk/debug/sadfasdfas-unsigned.apk");
         Zip.zip(apkTemp, unSignedApk);
         System.out.println("makeApk--ok");
     }
@@ -106,12 +113,16 @@ public class Main {
      * 4. 对齐
      */
     private static void zipalign() throws IOException, InterruptedException {
-        File unSignedApk = new File("app/build/outputs/apk/debug/app-unsigned.apk");
+        File unSignedApk = new File("app/build/outputs/apk/debug/sadfasdfas-unsigned.apk");
         // zipalign -v -p 4 my-app-unsigned.apk my-app-unsigned-aligned.apk
-        File alignedApk = new File("app/build/outputs/apk/debug/app-unsigned-aligned.apk");
-        Process process = Runtime.getRuntime().exec("cmd /c zipalign -v -p  4 " + unSignedApk.getAbsolutePath()
-//        Process     process = Runtime.getRuntime().exec("cmd /c zipalign -f 4 " + unSignedApk.getAbsolutePath()
-                + " " + alignedApk.getAbsolutePath());
+        File alignedApk = new File("app/build/outputs/apk/debug/sadfasdfas-unsigned-aligned.apk");
+
+        //window
+//        Process process = Runtime.getRuntime().exec("cmd /c zipalign -v -p  4 " + unSignedApk.getAbsolutePath()
+        //mac
+        String cmd = "/Users/ziqimo/Library/Android/sdk/build-tools/27.0.3/zipalign -v -p  4 " + unSignedApk.getAbsolutePath()
+                + " " + alignedApk.getAbsolutePath();
+        Process process = Runtime.getRuntime().exec(new String[]{"/bin/sh", "-c", cmd});
         process.waitFor();
 
         //zipalign -v -p 4 D:\Downloads\android_space\DexDEApplication\app\build\outputs\apk\debug\app-unsigned.apk D:\Downloads\android_space\DexDEApplication\app\build\outputs\apk\debug\app-unsigned-aligned.apk
@@ -128,14 +139,19 @@ public class Main {
     public static void jksToApk() throws IOException, InterruptedException {
         // apksigner sign --ks my-release-key.jks --out my-app-release.apk my-app-unsigned-aligned.apk
         //apksigner sign  --ks jks文件地址 --ks-key-alias 别名 --ks-pass pass:jsk密码 --key-pass pass:别名密码 --out  out.apk in.apk
-        File signedApk = new File("app/build/outputs/apk/debug/app-signed-aligned.apk");
+        File signedApk = new File("app/build/outputs/apk/debug/sadfasdfas-signed-aligned.apk");
         File jks = new File("proxy_tools/dexjks.jks");
-        File alignedApk = new File("app/build/outputs/apk/debug/app-unsigned-aligned.apk");
+        File alignedApk = new File("app/build/outputs/apk/debug/sadfasdfas-unsigned-aligned.apk");
         //apksigner sign --ks D:\Downloads\android_space\DexDEApplication\proxy_tools\dexjks.jks --ks-key-alias yangkun --ks-pass pass:123123 --key-pass pass:123123 --out D:\Downloads\android_space\DexDEApplication\app\build\outputs\apk\debug\app-signed-aligned.apk D:\Downloads\android_space\DexDEApplication\app\build\outputs\apk\debug\app-unsigned-aligned.apk
         //apksigner sign --ks my-release-key.jks --out my-app-release.apk my-app-unsigned-aligned.apk
-        Process process = Runtime.getRuntime().exec("cmd /c  apksigner sign --ks " + jks.getAbsolutePath()
+
+        //window
+//        Process process = Runtime.getRuntime().exec("cmd /c  apksigner sign --ks " + jks.getAbsolutePath()
+        //mac
+        String cmd = "/Users/ziqimo/Library/Android/sdk/build-tools/27.0.3/apksigner sign --ks " + jks.getAbsolutePath()
                 + " --ks-key-alias yangkun --ks-pass pass:123123 --key-pass pass:123123 --out "
-                + signedApk.getAbsolutePath() + " " + alignedApk.getAbsolutePath());
+                + signedApk.getAbsolutePath() + " " + alignedApk.getAbsolutePath();
+        Process process = Runtime.getRuntime().exec(new String[]{"/bin/sh", "-c", cmd});
         process.waitFor();
         if (process.exitValue() != 0) {
             throw new RuntimeException("dex error");
